languages/CNNArchLang/src/test/resources/invalid_tests/MissingSemicolon.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture MultipleStreams{
    def input Q(-oo:+oo)^{10} data
    def output Q(0:1)^{4} pred

    data ->
    FullyConnected(units=4, no_bias=true) ->
    Softmax() ->
    pred
}
